Fixed lasagna alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background:rgb(57, 63, 58);
     padding: 150px;
 }
-img{
+.img-responsive{
     width: 100%;
     height: auto;
 }
